--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vue-tree-view",
-  "version": "1.0.2",
   "description": "Tree View component for Vue JS.",
-  "main": "dist/vue.tree-view.min.js",
+  "version": "1.0.2",
+  "main": "dist/vue.tree-view.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/LucBos/vue-tree-view.git"
@@ -16,6 +16,13 @@
   "engines": {
     "node": ">= 6.0"
   },
+  "files": [
+    "dist/vue.tree-view.css",
+	"dist/vue.tree-view.js",
+	"dist/vue.tree-view.min.css",
+	"dist/vue.tree-view.min.js",
+    "src"
+	],
   "author": "10Quality <info@10quality.com>",
   "bugs": {
     "url": "https://github.com/LucBos/vue-tree-view/issues"
